frontEnd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reservation-restaurant-service
  labels:
    app: reservation-restaurant
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      nodePort: 30080 # Choisissez un port entre 30000 et 32767
  selector:
    app: reservation-restaurant
