frontEnd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reservation-restaurant-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: reservation.example.com # Remplacez par votre domaine
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: reservation-restaurant-service
                port:
                  number: 80
